# SKY_kursovik

./: .env_template  README.md  pyproject.toml
src/: main.py  read_excel.py  reports.py  services.py  utils.py  views.py
tests/: test_main.py  test_read_excel.py  test_reports.py  test_services.py  test_utils.py  test_views.py
